--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,13 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
+before_install:
+  - python --version
+  - pip install -U pip
+  - pip install codecov
 install:
   -  pip install .
 script:
   - python -m unittest discover
+after_success:
+  - codecov
