--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: python
 os:
   - linux
-  - osx
-  - windows
+#  - osx
+#  - windows
 python:
   - "3.6"
-  - "3.7"
-  - "3.8"
+#  - "3.7"
+#  - "3.8"
 before_install:
   - python --version
   - pip install -U pip
   - pip install coverage codecov cython
 install:
-  -  pip install .
+  -  pip install -vv .
 script:
   - coverage run -m unittest discover -s tests/
 after_success:
