--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - pip install coverage codecov cython
 install:
 #  - pip install -vv --no-build-isolation  .
-  - pip install -vv .
+  - pip install -vv dist/phylodm-1.1.0.tar.gz
 script:
   - coverage run -m unittest discover -s tests/
 after_success:
