--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ python:
 #  - "3.8"
 before_install:
   - python --version
-  - pip install -U pip
+  - pip install -U pip setuptools
   - pip install coverage codecov cython
 install:
 #  - pip install -vv --no-build-isolation  .
+  - python setup.py sdist
   - pip install -vv dist/phylodm-1.1.0.tar.gz
 script:
   - coverage run -m unittest discover -s tests/
