fix(ci): Updated CI for semantic release.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "phylodm"
-version = 2.0.2
+version = "2.0.2"
 authors = ["Aaron Mussig <aaronmussig@gmail.com>"]
 edition = "2021"
 description = "Efficient calculation of phylogenetic distance matrices."
@@ -20,7 +20,7 @@ python = ["pyo3/extension-module"]
 light_phylogeny = "1.4"
 derive_more = "0.99"
 itertools = "0.10"
-pyo3 = { version = 2.0.2
+pyo3 = { version = "0.16", features = ["extension-module"], optional=true }
 numpy = "0.16"
 
 [profile.release]
