--- a/.releaserc
+++ b/.releaserc
@@ -9,7 +9,7 @@
     [
       "@semantic-release/exec",
       {
-        "verifyReleaseCmd": "sed -i \"s/version = .*/version = \"${nextRelease.version}\"/g\" Cargo.toml"
+        "verifyReleaseCmd": "sed -i 's/^version = .*$/version = \"${nextRelease.version}\"/g' Cargo.toml"
       }
     ],
     [
