--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           command: build
           args: --release --all-features
+      - uses: actions-rs/cargo@v1
+        with:
+          command: publish
 
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
