--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "devDependencies": {
     "@semantic-release/github": "^8.0.4",
     "@semantic-release/changelog": "^6.0.1",
@@ -6,6 +7,6 @@
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "semantic-release": "^18.0.0"
+    "semantic-release": "^19.0.2"
   }
 }
