build(cibuildwheel): Skip i686 and py38

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.cibuildwheel]
 before-all = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"
-skip = "cp27-* cp34-* cp35-* cp36-* pp* *-win32 *-musllinux*"
+skip = "cp27-* cp34-* cp35-* cp36-* cp37-* cp38-* pp* *-win32 *-musllinux* *_i686*"
 environment = 'PATH="$PATH:$HOME/.cargo/bin"'
 test-command = "python -m unittest discover {project}/test"
 test-requires = ["dendropy", "numpy"]
