--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ python = ["pyo3/extension-module"]
 light_phylogeny = "1.4"
 derive_more = "0.99"
 itertools = "0.10"
-pyo3 = { version = "0.16", features = ["extension-module"], optional=true }
+pyo3 = { version = "0.16", features = ["extension-module"], optional=false }
 numpy = "0.16"
 
 [profile.release]
