--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -5,8 +5,21 @@ on:
       - main
 
 jobs:
+
+  # Build and test Rust
+  build_and_test_rust:
+    name: Build and test Rust
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - run: cargo test --release --all-features
+
   # Run semantic release on main branch
   semantic-release:
+    needs: [ build_and_test_rust ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
