ci(github): Update Build and Test step to use actions-rs.

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --release --all-features
+          args: --release --all-features --verbose
 
   # Run semantic release on main branch
   semantic-release:
