--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -1,67 +1,140 @@
-name: Build and upload to PyPI
+name: Version, build, publish
 
 on:
- release:
-   types:
-     - published
+  push:
+    branches:
+      - main
 
 jobs:
 
-  build_wheels:
-    name: Build wheels on ${{ matrix.os }}
+  semantic_release_next_version:
+    name: Next version
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 16
+      - run: npm install
+      - run: npx semantic-release --dry-run
+        id: semantic_release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Cargo.toml
+          path: Cargo.toml
+          retention-days: 1
+    outputs:
+      version: ${{ steps.semantic_release.outputs.version }}
+
+  test_rust:
+    name: Build Rust
+    needs: semantic_release_next_version
+    if: needs.semantic_release_next_version.outputs.version != ''
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --release --all-features
+
+  build_python_wheels:
+    name: Python ${{ matrix.pyver }}@${{ matrix.os }}.whl
+    needs: semantic_release_next_version
+    if: needs.semantic_release_next_version.outputs.version != ''
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-11]
+        pyver: [cp37, cp38, cp39, cp310, cp311]
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.6.0
-
+      - uses: actions/checkout@v3
+      - uses: pypa/cibuildwheel@v2.10.0
+        env:
+          CIBW_BUILD: ${{matrix.pyver}}-*
       - uses: actions/upload-artifact@v3
         with:
           name: pypi
           path: wheelhouse/*.whl
           retention-days: 1
 
-  build_sdist:
-    name: Build source distribution
+  build_python_dist:
+    name: Python build *.tar.gz
     runs-on: ubuntu-latest
+    needs: semantic_release_next_version
+    if: needs.semantic_release_next_version.outputs.version != ''
     steps:
-      - uses: actions/checkout@v2
-
+      - uses: actions/checkout@v3
       - name: Build sdist
         run: pipx run build --sdist
-
       - uses: actions/upload-artifact@v3
         with:
           name: pypi
           path: dist/*.tar.gz
           retention-days: 1
 
-  upload_pypi:
-    needs: [build_wheels, build_sdist]
+  test_python_dist:
+    name: Python test *.tar.gz
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'published'
+    needs: build_python_dist
+    steps:
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - uses: actions/download-artifact@v3
+        with:
+          name: pypi
+          path: dist
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - run: echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
+      - run: python -m pip install dist/*.tar.gz
+      - run: python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
+
+  semantic_release_publish:
+    name: Publish to GitHub
+    needs: [test_rust, test_python_dist, build_python_wheels]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 16
+      - run: npm install
+      - run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  upload_pypi:
+    name: Publish to PyPI
+    needs: [test_rust, test_python_dist, build_python_wheels]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: pypi
           path: dist
 
-      - uses: pypa/gh-action-pypi-publish@v1.4.2
+      - uses: pypa/gh-action-pypi-publish@v1.5
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
 
   upload_crates:
-    needs: [build_wheels, build_sdist]
     name: Publish to crates.io
+    needs: [test_rust, test_python_dist, build_python_wheels]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
