--- a/.releaserc
+++ b/.releaserc
@@ -9,7 +9,7 @@
     [
       "@semantic-release/exec",
       {
-        "verifyReleaseCmd": "./version.sh ${nextRelease.version}"
+        "verifyReleaseCmd": "./version.sh ${nextRelease.version} && echo ::set-output name=version::${nextRelease.version}"
       }
     ],
     [
