--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -103,6 +103,7 @@ jobs:
         with:
           python-version: '3.10'
       - run: echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
+      - run: python -m pip install dendropy
       - run: python -m pip install dist/*.tar.gz
       - run: python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
 
