--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "Efficient calculation of phylogenetic distance matrices."
 readme = "README.md"
 repository = "https://github.com/aaronmussig/PhyloDM"
 license = "GPL-3.0"
+rust-version = "1.65.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
