--- a/.releaserc
+++ b/.releaserc
@@ -1,7 +1,8 @@
 {
   "tagFormat": "v${version}",
   "branches": [
-    "main"
+    "main",
+    {"name": "dev", "prerelease": true}
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
