--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           cache: npm
-          node-version: lts
+          node-version: lts/Iron
       - run: npm install
       - run: npx semantic-release --dry-run
         id: semantic_release
