--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -43,6 +43,45 @@ jobs:
           toolchain: stable
       - run:
             cargo test --release --all-features
+
+  build_linux:
+    needs: test_rust
+    runs-on: ${{ matrix.platform.runner }}
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-latest
+            target: x86_64
+          - runner: ubuntu-latest
+            target: x86
+          - runner: ubuntu-latest
+            target: aarch64
+        python-version:
+          - '3.8'
+          - '3.9'
+          - '3.10'
+          - '3.11'
+          - '3.12'
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
+          manylinux: auto
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-linux-${{ matrix.platform.target }}
+          path: dist
+          retention-days: 1
+
+
 #
 #  build_python_wheels:
 #    name: Python ${{ matrix.pyver }}@${{ matrix.os }}.whl
