ci(github): Testing GitHub actions with maturin.

--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -54,16 +54,19 @@ jobs:
             target: x86_64
           - runner: ubuntu-latest
             target: x86
-          - runner: ubuntu-latest
-            target: aarch64
+#          - runner: ubuntu-latest
+#            target: aarch64
         python-version:
           - '3.8'
-          - '3.9'
-          - '3.10'
-          - '3.11'
-          - '3.12'
+#          - '3.9'
+#          - '3.10'
+#          - '3.11'
+#          - '3.12'
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: semantic-release-dev
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
@@ -77,9 +80,15 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-linux-${{ matrix.platform.target }}
+          name: wheels-linux-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
           path: dist
           retention-days: 1
+      - name: Test wheel
+        run: |
+          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
+          python -m pip install dendropy
+          python -m pip install dist/*.whl
+          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
 
 
 #
