--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ requires = ["maturin>=1.0,<2.0"]
 build-backend = "maturin"
 
 [tool.maturin]
+features = ["pyo3/extension-module"]
 python-source = "python"
 module-name = "phylodm.pdm"
 include = [
