--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -6,46 +6,46 @@ on:
       - dev
 
 jobs:
-
-  semantic_release_next_version:
-    name: Next version
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          cache: npm
-          node-version: lts/Iron
-      - run: npm install
-      - run: npx semantic-release --dry-run
-        id: semantic_release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/upload-artifact@v4
-        with:
-          name: semantic-release-dev
-          path: |
-            Cargo.toml
-            pyproject.toml
-          retention-days: 1
-    outputs:
-      version: ${{ steps.semantic_release.outputs.version }}
-
-  test_rust:
-    name: Build Rust
-    needs: semantic_release_next_version
-    if: needs.semantic_release_next_version.outputs.version != ''
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
-        with:
-          toolchain: stable
-      - run:
-            cargo test --release --all-features
+#
+#  semantic_release_next_version:
+#    name: Next version
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-node@v4
+#        with:
+#          cache: npm
+#          node-version: lts/Iron
+#      - run: npm install
+#      - run: npx semantic-release --dry-run
+#        id: semantic_release
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          name: semantic-release-dev
+#          path: |
+#            Cargo.toml
+#            pyproject.toml
+#          retention-days: 1
+#    outputs:
+#      version: ${{ steps.semantic_release.outputs.version }}
+#
+#  test_rust:
+#    name: Build Rust
+#    needs: semantic_release_next_version
+#    if: needs.semantic_release_next_version.outputs.version != ''
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions-rust-lang/setup-rust-toolchain@v1
+#        with:
+#          toolchain: stable
+#      - run:
+#            cargo test --release --all-features
 
   build_linux:
-    needs: test_rust
+#    needs: test_rust
     runs-on: ${{ matrix.platform.runner }}
     strategy:
       matrix:
@@ -74,7 +74,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist
           sccache: 'true'
           manylinux: auto
       - name: Upload wheels
