ci(github): Testing GitHub actions with maturin.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ requires = ["maturin>=1.0,<2.0"]
 build-backend = "maturin"
 
 [tool.maturin]
-features = ["pyo3/extension-module"]
+features = ["pyo3", "numpy", "python"]
 python-source = "python"
 module-name = "phylodm.pdm"
 include = [
