--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -87,41 +87,41 @@ jobs:
 #          path: dist
 #          retention-days: 1
 
-  musllinux:
-    #    needs: test_rust
-    runs-on: ${{ matrix.platform.runner }}
-    strategy:
-      matrix:
-        platform:
-          - runner: ubuntu-latest
-            target: x86_64
-        python-version:
-          - '3.8'
+#  musllinux:
+#    needs: test_rust
+#    runs-on: ${{ matrix.platform.runner }}
+#    strategy:
+#      matrix:
+#        platform:
+#          - runner: ubuntu-latest
+#            target: x86_64
+#        python-version:
+#          - '3.8'
 #          - '3.9'
 #          - '3.10'
 #          - '3.11'
 #          - '3.12'
-    steps:
-      - uses: actions/checkout@v4
-      #      - uses: actions/download-artifact@v4
-      #        with:
-      #          name: semantic-release-dev
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Build wheel
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
-          sccache: 'true'
-          manylinux: musllinux_1_2
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-musllinux-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
-          path: dist
-          retention-days: 1
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/download-artifact@v4
+#        with:
+#          name: semantic-release-dev
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#      - name: Build wheel
+#        uses: PyO3/maturin-action@v1
+#        with:
+#          target: ${{ matrix.platform.target }}
+#          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
+#          sccache: 'true'
+#          manylinux: musllinux_1_2
+#      - name: Upload wheels
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: wheels-musllinux-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
+#          path: dist
+#          retention-days: 1
 
 
   windows:
@@ -156,7 +156,7 @@ jobs:
         run: |
           echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
           python -m pip install dendropy
-          python -m pip install dist\*.whl --force-reinstall
+          python -m pip install (get-item .\dist\*.whl) --force-reinstall
           python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -165,72 +165,72 @@ jobs:
           path: dist
           retention-days: 1
 
-  osx:
-    #    needs: test_rust
-    runs-on: ${{ matrix.platform.runner }}
-    strategy:
-      matrix:
-        platform:
-          - runner: macos-12
-            target: x86_64
-          - runner: macos-14
-            target: aarch64
-        python-version:
-          - '3.8'
-    #          - '3.9'
-    #          - '3.10'
-    #          - '3.11'
-    #          - '3.12'
-    steps:
-      - uses: actions/checkout@v4
-      #      - uses: actions/download-artifact@v4
-      #        with:
-      #          name: semantic-release-dev
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Build wheel
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
-          sccache: 'true'
-      - name: Test wheel
-        run: |
-          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
-          python -m pip install dendropy
-          python -m pip install dist/*.whl --force-reinstall
-          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-osx-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
-          path: dist
-          retention-days: 1
+#  osx:
+#    needs: test_rust
+#    runs-on: ${{ matrix.platform.runner }}
+#    strategy:
+#      matrix:
+#        platform:
+#          - runner: macos-12
+#            target: x86_64
+#          - runner: macos-14
+#            target: aarch64
+#        python-version:
+#          - '3.8'
+#          - '3.9'
+#          - '3.10'
+#          - '3.11'
+#          - '3.12'
+#    steps:
+#      - uses: actions/checkout@v4
+#            - uses: actions/download-artifact@v4
+#              with:
+#                name: semantic-release-dev
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#      - name: Build wheel
+#        uses: PyO3/maturin-action@v1
+#        with:
+#          target: ${{ matrix.platform.target }}
+#          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
+#          sccache: 'true'
+#      - name: Test wheel
+#        run: |
+#          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
+#          python -m pip install dendropy
+#          python -m pip install dist/*.whl --force-reinstall
+#          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
+#      - name: Upload wheels
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: wheels-osx-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
+#          path: dist
+#          retention-days: 1
 
 
-  sdist:
-    #    needs: test_rust
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      #      - uses: actions/download-artifact@v4
-      #        with:
-      #          name: semantic-release-dev
-      - name: Build wheel
-        uses: PyO3/maturin-action@v1
-        with:
-          command: sdist
-          args: --out dist
-      - name: Test dist
-        run: |
-          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
-          python -m pip install dendropy
-          python -m pip install dist/*.tar.gz --force-reinstall
-          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-sdist
-          path: dist
-          retention-days: 1
+#  sdist:
+#    needs: test_rust
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/download-artifact@v4
+#        with:
+#          name: semantic-release-dev
+#      - name: Build wheel
+#        uses: PyO3/maturin-action@v1
+#        with:
+#          command: sdist
+#          args: --out dist
+#      - name: Test dist
+#        run: |
+#          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
+#          python -m pip install dendropy
+#          python -m pip install dist/*.tar.gz --force-reinstall
+#          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
+#      - name: Upload wheels
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: wheels-sdist
+#          path: dist
+#          retention-days: 1
