--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,11 @@ python = ["pyo3", "numpy"]
 
 [dependencies]
 light_phylogeny = "2.2.7"
-derive_more = "0.99.18"
+derive_more = { version = "1.0.0", features = ["add", "sum"] }
 itertools = "0.13"
-pyo3 = { version = "0.21.0", features = ["extension-module"], optional = true }
+pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
 numpy = { version = "0.21.0", optional = true }
-ndarray = "0.15.6"
+ndarray = "0.16.1"
 
 [profile.release]
 lto = true
